--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Market Making bot for the coss.io exchange",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
